--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="Data.Models" />
+  </ItemGroup>
+
 </Project>
