Add lots of outrageous stuff to connect to database and all the database stuff work

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreConnection": "Server=localhost;Port=5432;Database=countRieApp;User Id=app;Password=app;"
+  },
   "AllowedHosts": "*"
 }
