--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.3.0" />
   </ItemGroup>
 
@@ -15,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="AutoMapper" />
+    <Using Include="Data" />
     <Using Include="MediatR" />
   </ItemGroup>
 
