Add a shit ton of authentication/authorization garbage

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreConnection": "Server=localhost;Port=5432;Database=countRieApp;User Id=app;Password=app;"
+    "PostgreConnection": "Server=localhost;Port=5432;Database=countRieApp;User Id=app;Password=app;",
+    "DataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
