--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,7 +41,7 @@ jobs:
         run: 'gcloud info'
 
       - name: 'Build the docker image'
-        run: 'gcloud builds submit --tag europe-central2-docker.pkg.dev/countrie/repo/countrie:latest .'
+        run: 'gcloud builds submit --tag europe-central2-docker.pkg.dev/countrie/repo/countrie:latest /Web/.'
 
       - name: 'Deploy to Cloud Run'
         run: 'gcloud run deploy countrie --image europe-central2-docker.pkg.dev/countrie/repo/countrie:latest --region europe-central2 --allow-unauthenticated --project countrie --max-instances=4'
