--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      - name: 'Copy Dockerfile to root'
+        run: cp Web/Dockerfile ./Dockerfile
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
