--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     env:
       ConnectionStrings__PostgreConnectionRelease: ${{ secrets.DATABASE_CONNECTION }}
