Use ToListAsync instead of sync call in queries

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -21,6 +21,7 @@
     <Using Include="AutoMapper" />
     <Using Include="Data" />
     <Using Include="MediatR" />
+    <Using Include="Microsoft.EntityFrameworkCore" />
   </ItemGroup>
 
 </Project>
